--- a/front-classroom/src/index.css
+++ b/front-classroom/src/index.css
@@ -36,8 +36,9 @@ body {
 
 h1 {
   font-family: 'Inter', sans-serif;
-  font-size: 36px;
-  font-weight: 400; 
+  font-size: 2.25rem;
+  font-weight: 500;
+  line-height: 2.75rem;
   color: var(--outer-space);
   margin: 0;
 }
