--- a/front-classroom/src/css/claseNovedades.css
+++ b/front-classroom/src/css/claseNovedades.css
@@ -38,7 +38,7 @@
     flex-direction: row;
     align-items: flex-start;
     border: var(--linear-gray) 1px solid;
-    padding: 0.8rem;
+    padding: 1.2rem;
     border-radius: 0.8rem;
     border-bottom: var(--linear-gray) 2px solid;
     gap: 0.6rem;
@@ -68,7 +68,7 @@
     flex-direction: column;
     width: 100%;
     height: max-content;
-    gap: 0.5rem;
+    gap: 0.2rem;
 }
 
 .publication-content p {
@@ -79,4 +79,5 @@
 .publication-text p{
     color: var(--outer-space);
     font-weight: 500;
+    margin-top: 0.5rem;
 }
