--- a/front-classroom/src/index.css
+++ b/front-classroom/src/index.css
@@ -61,8 +61,8 @@ h3 {
 
 h4 {
   font-family: 'Inter', sans-serif;
-  font-size: 20px;
-  font-weight: 400; 
+  font-size: 1.2rem;
+  font-weight: 500; 
   color: var(--outer-space);
   margin: 0;
 }
