--- a/front-classroom/src/css/claseNovedades.css
+++ b/front-classroom/src/css/claseNovedades.css
@@ -33,15 +33,21 @@
 }
 
 
-.publication-item {
+.publication-header {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
+    padding: 0.8rem;
+    gap: 0.6rem;
+}
+
+.publication-item {
+    display: flex;
+    flex-direction: column;
     border: var(--linear-gray) 1px solid;
-    padding: 1.2rem;
     border-radius: 0.8rem;
     border-bottom: var(--linear-gray) 2px solid;
-    gap: 0.6rem;
+    gap: 0.2rem;
 }
 
 .publication-left {
@@ -66,14 +72,21 @@
 .publication-content {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     width: 100%;
-    height: max-content;
+    height: 100%;
     gap: 0.2rem;
 }
 
 .publication-content p {
     color: var(--outer-space);
     font-weight: 400;
+}
+
+.publication-text{
+    padding-left: 0.8rem;
+    padding-right: 0.8rem;
+    padding-bottom: 0.8rem;
 }
 
 .publication-text p{
