--- a/front-classroom/src/index.css
+++ b/front-classroom/src/index.css
@@ -361,3 +361,10 @@ select:disabled {
   color: var(--raisin-black);
 }
 
+.blue-i {
+  background-color: var(--tufus-blue);
+}
+
+.alice-blue {
+  color: aliceblue;
+}
