--- a/front-classroom/src/App.css
+++ b/front-classroom/src/App.css
@@ -6,7 +6,6 @@
   display: flex;
   flex-direction: row;
   width: 100%; /* cambiado de auto a 100% */
-  height: 100vh;
   box-sizing: border-box;
 }
 
@@ -14,9 +13,9 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
   padding: 2% 15% 0 15%;
   gap: 2rem;
+  margin-bottom: 2rem;
 }
 
 .center-title {
