--- a/front-classroom/src/index.css
+++ b/front-classroom/src/index.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 body {
   margin: 0;
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -71,6 +71,7 @@ span {
   font-family: 'Inter', sans-serif;
   font-size: 13px;
   font-weight: 600;
+  line-height: 1.2rem;
   color: var(--outer-space);
   margin: 0;
 }
@@ -81,9 +82,10 @@ span .description{
 }
 
 p {
-  font-family: 'Inter', sans-serif;
-  font-size: 13px;
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-size: .875rem;
   font-weight: 400;
+  line-height: 1.25rem;
   color: var(--raisin-black);
   margin: 0;
 }
