Lateral form deleted and added as a element on the right side

--- a/front-classroom/src/index.css
+++ b/front-classroom/src/index.css
@@ -69,7 +69,7 @@ h4 {
 
 span {
   font-family: 'Inter', sans-serif;
-  font-size: 13px;
+  font-size: 0.873rem;
   font-weight: 600;
   line-height: 1.2rem;
   color: var(--outer-space);
